# 100_days_of_python

Day 15/CoffeeMachine/: main.py  pyproject.toml
Day 16/day-16-start/: main.py  pyproject.toml
Day 16/oop-coffee-machine-start/: main.py
Day 17/day-17-start/: main.py  pyproject.toml
Day 17/quiz-game-start/: data.py  main.py  quiz_brain.py
Day 18/day-18-start/: main.py  pyproject.toml
Day 18/hirst-painting/: main.py  pyproject.toml
Day 19-20/snake_game/: food.py  main.py  scoreboard.py  snake.py
Day 19/day-19-start/: commands.py  main.py  pyproject.toml
Day 20-21/snake_game/: main.py  pyproject.toml  scoreboard.py  snake.py
Day 21/pong/: ball.py  main.py  player.py
Day 22/frogger/: car_manager.py  main.py  player.py  scoreboard.py
Day 22/pong/: main.py  net.py  player.py  pyproject.toml  scoreboard.py
Day 23/frogger/: main.py  pyproject.toml  scoreboard.py
Day 24/Mail Merge Project Start/: main.py
Day 24/Mail Merge Project Start/Output/ReadyToSend/: letter_to_Aang.txt  letter_to_Appa.txt  letter_to_Katara.txt  letter_to_Momo.txt  letter_to_Sokka.txt  letter_to_Uncle Iroh.txt  letter_to_Zuko.txt
Day 24/read_write_files/: main.py  my_file.txt  new_file  pyproject.toml
Day 25/day-25-start/: main.py  new_csv_file.csv  pyproject.toml
Day 25/us-states-game-start/: main.py  missing_states.csv  pyproject.toml
Day 26/list_comprehension/: main.py  pyproject.toml
Day 27/day-27-start/: main.py  playground.py  pyproject.toml
Day 27/km_ml_converter/: main.py  pyproject.toml
Day 28/pomodoro_tkinter/: main.py  pyproject.toml
Day 29/password_manager/: main.py  password_generator.py  pyproject.toml  saved_accounts.json  saved_accounts.txt
Day 31/Flash Card App/: flashcard.py  main.py  pyproject.toml
Day 31/Flash Card App/data/: Chinese_to_spanish.csv
Day 33/apis/: main.py  pyproject.toml
Day 33/iss_tracker/: main.py  pyproject.toml
Day 33/kanye-quotes/: main.py
