[tool.poetry]
name = "hirst-painting"
version = "0.1.0"
description = ""
authors = ["Eddy Cedeño <miguepoke28@gmail.com>"]
readme = "README.md"
packages = [{include = "hirst_painting"}]

[tool.poetry.dependencies]
python = "^3.10"
"colorgram.py" = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
