[tool.poetry]
name = "day-25-start"
version = "0.1.0"
description = ""
authors = ["Eddy Cedeño <miguepoke28@gmail.com>"]
readme = "README.md"
packages = [{include = "day_25_start"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
