[tool.poetry]
name = "pomodoro-tkinter"
version = "0.1.0"
description = ""
authors = ["Eddy Cedeño <miguepoke28@gmail.com>"]
readme = "README.md"
packages = [{include = "pomodoro_tkinter"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
